[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "singularity-minecraft-agent"
version = "0.1.0"
description = "Evidence-driven Minecraft LLM agent research system"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openai>=1.0",
  "anthropic>=0.20",
  "pydantic>=2.0",
]

[project.scripts]
singularity-agent = "singularity.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
singularity = ["data/*.json"]
